# tessierplot

./: .gitignore  MANIFEST.in  README.md  Tutorial&Examples.ipynb  notebook.bat  pyproject.toml  setup.py  tessierView.py
tessierplot/: colorbar.py  data.py  gui.py  helpers.py  killpulsetubenoise.py  plot.py  styles.py  view.py
tessierplot/assets/: cube2.txt
