[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tessierplot"
version = "0.2"
description = "Module for plotting/manipulating 2d/3d data"
authors = [
  { name = "KnightForest", email = "j.ridderbos@utwente.nl" }
]
readme = ""
requires-python = ">=3.7"
license = "MIT"
dependencies = [
  "matplotlib",
  "pyperclip",
  "six",
  "pandas",
  "pywin32",
  "quantiphy",
  "scipy",
  "peakutils",
  "numpy",
  "pyqt5",
  "notebook==6.5.6"
]

[project.urls]
Homepage = "https://github.com/KnightForest/tessierplot"

[tool.setuptools.packages.find]
where = ["."]
include = ["tessierplot*"]